data/derived/comb/progs/unify/prog2133.ml.out
Characters 8-34:
  let _ = (List.combine [1,3] [2,4])
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type ((int * int) * (int * int)) list
       This is not a function; it cannot be applied.
